# argus

./: .gitignore  LICENSE  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/adapters/: base.py  claude_adapter.py  http_adapter.py  python_adapter.py  registry.py
backend/app/api/: agents.py  health.py  runs.py  websocket.py
backend/app/core/: config.py  database.py  event_bus.py
backend/app/ingest/: otlp.py
backend/app/models/: agent.py  evaluation.py  run.py  span.py
backend/app/repositories/: agent_repo.py  eval_repo.py  run_repo.py  span_repo.py
backend/app/services/: agent_service.py  run_service.py  trace_service.py
backend/tests/: conftest.py  test_agents.py  test_otlp.py  test_runs.py
docs/adr/: ADR-001-backend-framework.md  ADR-002-frontend-framework.md  ADR-003-storage.md  ADR-004-tracing-protocol.md  ADR-005-flow-visualization.md  ADR-006-realtime-transport.md
docs/architecture/: adapter-pattern.md  api-design.md  data-model.md  overview.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  client.ts  runs.ts
frontend/src/components/agents/: AgentForm.tsx
frontend/src/components/flow/: FlowGraph.tsx  SpanNode.tsx  layout.test.ts  layout.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/hooks/: useAgents.ts  useRunStream.ts
frontend/src/pages/: AgentsPage.tsx  RunDetailPage.tsx  RunsPage.tsx
frontend/src/stores/: runStream.test.ts  runStream.ts
frontend/src/types/: index.ts
(+7 files in other folders)
